update gc options